EAEC-7: Adapt responsive to leave more room for slides in order to avoid text overlap

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -85,6 +85,8 @@
     font-size: $font-size-xsm;
     letter-spacing: 0.2em;
     line-height: 1em;
+    font-weight: bold;
+    font-family: $font-family-sans-serif;
 
     @include media-breakpoint-up(xsm) {
       font-size: $font-size-sm;
